@@ -2,8 +2,8 @@ Package: memisc
 Type: Package
 Title: Tools for Management of Survey Data, Graphics, Programming,
         Statistics, and Simulation
-Version: 0.95-37
-Date: 2011-12-7
+Version: 0.95-38
+Date: 2012-02-15
 Author: Martin Elff
 Maintainer: Martin Elff <melff@essex.ac.uk>
 Description: One of the aims of this package is to make life easier for
@@ -18,8 +18,8 @@ Description: One of the aims of this package is to make life easier for
         programming, and simulation are provided.
 License: GPL-2
 LazyLoad: Yes
-Depends: lattice, grid, stats, methods, utils, MASS
+Depends: R (>= 2.9.0), lattice, grid, stats, methods, utils, MASS
 URL: http://www.martin-elff.net/software/memisc/
-Packaged: 2011-12-07 17:21:48 UTC; elff
+Packaged: 2012-02-15 10:21:01 UTC; elff
 Repository: CRAN
-Date/Publication: 2011-12-08 19:01:52
+Date/Publication: 2012-02-15 12:57:01
